--- a/gpt/restaurant-picker.html
+++ b/gpt/restaurant-picker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Restaurant Picker</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="restraunt-picker.css" />
   </head>
   <body>
     <div class="container">
@@ -21,6 +21,6 @@
       <div id="result"></div>
     </div>
 
-    <script src="main.js"></script>
+    <script type="module" src="restaurant-picker.js"></script>
   </body>
 </html>
