--- a/packages/front/public/index.html
+++ b/packages/front/public/index.html
@@ -23,6 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%KAKAO_MAP_KEY%"></script>
     <title>Random-Picker</title>
   </head>
   <body>
